--- a/assignment13/document/main.tex
+++ b/assignment13/document/main.tex
@@ -12,6 +12,34 @@
 \maketitle
 
 \newpage
+\section{Tabular Monte Carlo Control}
+My implementations in Julia are:
+\begin{itemize}
+\item \texttt{mc\_control\_grid\_world.jl} 
+\item \texttt{mc\_control\_random\_walk.jl}
+\item \texttt{mc\_control\_linear\_approx\_random\_walk.jl}
+\end{itemize}
+
+I apply Monte Carlo control to the grid world Markov decision process from the midterm and the 2D random walk from a previous assignment. I also implement linear function approximation for the action-value function.
+
+\section{Tabular SARSA}
+My implementations in Julia are:
+\begin{itemize}
+
+	\item \texttt{sarsa\_random\_walk.jl}
+	\item \texttt{sarsa\_linear\_approx\_random\_walk.jl}
+\end{itemize}
+
+I apply Sarsa to the 2D random walk from a previous assignment. I also implement linear function approximation for the action-value function.
+
+\section{Tabular Q-Learning}
+My implementations in Julia are:
+\begin{itemize}
+	\item \texttt{q\_learning\_random\_walk.jl}
+	\item \texttt{q\_learning\_linear\_approx\_random\_walk.jl}
+\end{itemize}
+
+I apply Q-learning to the 2D random walk from a previous assignment. I also implement linear function approximation for the action-value function.
 %\begin{figure}[H]
 %	\centering
 %	\includegraphics[width=.75\textwidth]}
