--- a/assignment16/document/main.tex
+++ b/assignment16/document/main.tex
@@ -33,4 +33,13 @@ I implemented Actor-Critic with eligibility traces and test it on the same grid 
 	\label{}
 \end{figure}
 
+\section{Question 3}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=.75\textwidth]{ipad/q3.jpg}
+	\caption{Work for question 3.}
+	\label{}
+\end{figure}
+
 \end{document}
